<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.salemhouse.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_recent"
        android:name="com.example.salemhouse.RecentFragment"
        android:label="@string/title_recent"
        tools:layout="@layout/fragment_recent" />
    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.salemhouse.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />
</navigation>