<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/length_16"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/confirmation_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_confirmation"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/montant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120$"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_paiement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_paiement_adresse"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0991234567"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bouton_action"
        android:text="@string/label_confirmation_paiement"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/length_8"
        app:layout_constraintTop_toBottomOf="@id/confirmation_reservation"/>
</androidx.constraintlayout.widget.ConstraintLayout>